samples/_failures_safe/1761311858_4b7f2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_354e3aa7.c: In function ‘main’:
./samples/SAFE/__tmp_354e3aa7.c:148:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  148 |     int num_
      |     ^~~
./samples/SAFE/__tmp_354e3aa7.c:148:5: error: expected declaration or statement at end of input
